fix&build: added preview flag in java exec params